--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "migrate-dev": "dotenv -e .env.local -- prisma migrate dev",
     "migrate-reset": "dotenv -e .env.local -- prisma migrate reset",
-    "db-seed": "dotenv -e .env.local -- prisma db seed"
+    "db-seed": "dotenv -e .env.local -- prisma db seed",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
