--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.5.0",
     "next": "14.1.1",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18"
   },
