--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hexagon": "^1.1.3",
-    "react-hexgrid": "^2.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
