--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
