--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
